fix spacing

--- a/imgcaptioner/styles.css
+++ b/imgcaptioner/styles.css
@@ -94,7 +94,7 @@ body {
     overflow: hidden;
 }
 
-.side-top {
+.side-left {
     flex: 1;
     max-width: 50%;
     border-right: 1px solid #ddd;
@@ -106,10 +106,11 @@ body {
     overflow: hidden;
 }
 
-.side-bottom {
+.side-right {
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content:space-between;
     gap: 10px;
     padding: 10px;
     overflow: hidden;
